--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "csv-to-sql",
+  "name": "csv-to-sql-insert",
   "version": "0.1.0",
   "repository": "https://github.com/gitdagray/csv-to-sql",
   "description": "input a csv file, output a sql insert statement",
