--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "csv-to-sql-insert",
-  "version": "0.1.0",
-  "repository": "https://github.com/gitdagray/csv-to-sql",
-  "description": "input a csv file, output a sql insert statement",
-  "main": "index.js",
-  "author": {
-    "name": "Dave Gray",
-    "email": "dave@davegray.codes",
-    "url": "https://www.davegray.codes/"
-  },
-  "license": "MIT"
+	"name": "csv-to-sql-insert",
+	"version": "0.1.0",
+	"type": "module",
+	"repository": "https://github.com/gitdagray/csv-to-sql",
+	"description": "input a csv file, output a sql insert statement",
+	"main": "index.js",
+	"author": {
+		"name": "Dave Gray",
+		"email": "dave@davegray.codes",
+		"url": "https://www.davegray.codes/"
+	},
+	"license": "MIT"
 }
