--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
 	"name": "csv-to-sql-insert",
 	"version": "0.1.0",
 	"type": "module",
+	"scripts": {
+		"start": "node index.js",
+		"dev": "node index.js"
+	},
 	"repository": "https://github.com/gitdagray/csv-to-sql",
 	"description": "input a csv file, output a sql insert statement",
 	"main": "index.js",
