--- a/package.json
+++ b/package.json
@@ -10,5 +10,15 @@
 		"email": "dave@davegray.codes",
 		"url": "https://www.davegray.codes/"
 	},
-	"license": "MIT"
+	"license": "MIT",
+	"devDependencies": {
+		"husky": "^8.0.3",
+		"prettier": "3.1.1",
+		"pretty-quick": "^3.1.3"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "pretty-quick --staged"
+		}
+	}
 }
