--- a/package.json
+++ b/package.json
@@ -11,6 +11,16 @@
   },
   "license": "MIT",
   "dependencies": {
+    "husky": "^8.0.3",
+    "pretty-quick": "^3.1.3",
     "yargs": "^17.7.2"
+  },
+  "husky": {
+		"hooks": {
+			"pre-commit": "pretty-quick --staged"
+		}
+	},
+  "devDependencies": {
+    "prettier": "3.1.1"
   }
 }
