--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run build && node dist/index.js",
-    "build": "tsc  --skipLibCheck"
+    "build": "tsc  --skipLibCheck",
+    "dev": "npm run build && node dist/index.js "
   },
   "author": {
     "name": "Dave Gray",
