--- a/package.json
+++ b/package.json
@@ -15,16 +15,27 @@
     "url": "https://www.davegray.codes/"
   },
   "license": "MIT",
-	"devDependencies": {
-		"husky": "^8.0.3",
-		"prettier": "3.1.1",
-		"pretty-quick": "^3.1.3",
-		 "@types/node": "^20.10.5",
+  "devDependencies": {
+    "@types/node": "^20.10.5",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-node": "^4.1.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard-with-typescript": "^43.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.5.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^5.1.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "husky": "^8.0.3",
+    "prettier": "^3.1.1",
+    "pretty-quick": "^3.1.3",
     "typescript": "^5.3.3"
-	},
-	"husky": {
-		"hooks": {
-			"pre-commit": "pretty-quick --staged"
-		}
-	}
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  }
 }
