--- a/package.json
+++ b/package.json
@@ -37,5 +37,9 @@
     "hooks": {
       "pre-commit": "pretty-quick --staged"
     }
+  },
+  "dependencies": {
+    "date-fns": "^3.0.6",
+    "uuid": "^9.0.1"
   }
 }
