chore(dev environment setup): configure commitlint, commitizen, lint-staged, husky, eslint, prettier
development environment configured

#55

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,32 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# Dependencies
 node_modules
+.pnp
+.pnp.js
+
+# Env files
 .env
-.vscode
-dist/
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Testing
+coverage
+
+# Build Outputs
+.next/
+out/
+build
+dist
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Misc
+.DS_Store
+*.pem
