--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run build && node dist/index.js",
-    "build": "tsc  --skipLibCheck"
+    "build": "tsc  --skipLibCheck",
+    "test": "vitest"
   },
   "author": {
     "name": "Dave Gray",
@@ -31,7 +32,8 @@
     "husky": "^8.0.3",
     "prettier": "^3.1.1",
     "pretty-quick": "^3.1.3",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^1.1.0"
   },
   "husky": {
     "hooks": {
