--- a/package.json
+++ b/package.json
@@ -1,43 +1,43 @@
 {
-  "name": "csv-to-sql-insert",
-  "version": "0.1.0",
-  "type": "module",
-  "repository": "https://github.com/gitdagray/csv-to-sql",
-  "description": "input a csv file, output a sql insert statement",
-  "main": "index.js",
-  "scripts": {
-    "start": "npm run build && node dist/index.js",
-    "build": "tsc  --skipLibCheck",
-    "test": "vitest"
-  },
-  "author": {
-    "name": "Dave Gray",
-    "email": "dave@davegray.codes",
-    "url": "https://www.davegray.codes/"
-  },
-  "license": "MIT",
-  "devDependencies": {
-    "@types/node": "^20.10.5",
-    "@typescript-eslint/eslint-plugin": "^6.15.0",
-    "eslint": "^8.56.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-node": "^4.1.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-config-standard-with-typescript": "^43.0.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^16.5.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^5.1.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "husky": "^8.0.3",
-    "prettier": "^3.1.1",
-    "pretty-quick": "^3.1.3",
-    "typescript": "^5.3.3",
-    "vitest": "^1.1.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged"
+    "name": "csv-to-sql-insert",
+    "version": "0.1.0",
+    "type": "module",
+    "repository": "https://github.com/gitdagray/csv-to-sql",
+    "description": "input a csv file, output a sql insert statement",
+    "main": "index.js",
+    "scripts": {
+        "start": "npm run build && node dist/index.js",
+        "build": "tsc  --skipLibCheck",
+        "test": "vitest --config ./src/__tests__/vitest.config.ts"
+    },
+    "author": {
+        "name": "Dave Gray",
+        "email": "dave@davegray.codes",
+        "url": "https://www.davegray.codes/"
+    },
+    "license": "MIT",
+    "devDependencies": {
+        "@types/node": "^20.10.5",
+        "@typescript-eslint/eslint-plugin": "^6.15.0",
+        "eslint": "^8.56.0",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-config-node": "^4.1.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-config-standard-with-typescript": "^43.0.0",
+        "eslint-plugin-import": "^2.29.1",
+        "eslint-plugin-n": "^16.5.0",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-prettier": "^5.1.1",
+        "eslint-plugin-promise": "^6.1.1",
+        "husky": "^8.0.3",
+        "prettier": "^3.1.1",
+        "pretty-quick": "^3.1.3",
+        "typescript": "^5.3.3",
+        "vitest": "^1.1.0"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "pretty-quick --staged"
+        }
     }
-  }
 }
