Added a command line argument "all" for processing all the files, exists in the ./csv folder. Example : npm start all --- for processing all the files , else npm start fileName ---- for a specific file

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run build && node dist/index.js",
-    "build": "tsc  --skipLibCheck"
+    "build": "tsc  --skipLibCheck",
+    "lint": "eslint --ext .ts src/",
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts"
   },
   "author": {
     "name": "Dave Gray",
