--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "scripts": {
         "dev:ts": "nodemon src/index.ts",
         "start": "npm run build && node dist/index.js",
+        "fix-memory-limit": "cross-env LIMIT=2048 increase-memory-limit",
         "build": "tsc  --skipLibCheck"
     },
     "author": {
@@ -16,8 +17,10 @@
     },
     "license": "MIT",
     "devDependencies": {
+        "@types/cli-progress": "^3.11.5",
         "@types/node": "^20.10.5",
         "@typescript-eslint/eslint-plugin": "^6.15.0",
+        "cross-env": "^7.0.3",
         "eslint": "^8.56.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-node": "^4.1.0",
@@ -29,6 +32,7 @@
         "eslint-plugin-prettier": "^5.1.1",
         "eslint-plugin-promise": "^6.1.1",
         "husky": "^8.0.3",
+        "increase-memory-limit": "^1.0.7",
         "nodemon": "^3.0.2",
         "prettier": "^3.1.1",
         "pretty-quick": "^3.1.3",
@@ -39,5 +43,9 @@
         "hooks": {
             "pre-commit": "pretty-quick --staged"
         }
+    },
+    "dependencies": {
+        "ansi-colors": "^4.1.3",
+        "cli-progress": "^3.12.0"
     }
 }
