--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
     "name": "csv-to-sql-insert",
     "version": "0.1.4",
+    "type": "module",
     "repository": "https://github.com/gitdagray/csv-to-sql",
     "description": "input a csv file, output a sql insert statement",
-    "main": "index.js",
     "scripts": {
-        "dev:ts": "nodemon src/index.ts",
-        "start": "npm run build && node dist/index.js",
+        "dev:ts": "nodemon src/app.ts",
+        "start": "npm run build && node dist/app.js",
         "fix-memory-limit": "cross-env LIMIT=2048 increase-memory-limit",
         "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+        "test": "vitest",
+        "coverage": "vitest run --coverage",
         "build": "tsc  --skipLibCheck"
     },
     "author": {
@@ -18,6 +20,7 @@
     },
     "license": "MIT",
     "devDependencies": {
+        "@types/inquirer": "^9.0.7",
         "@types/node": "^20.10.5",
         "@typescript-eslint/eslint-plugin": "^6.15.0",
         "cross-env": "^7.0.3",
@@ -37,7 +40,8 @@
         "prettier": "^3.1.1",
         "pretty-quick": "^3.1.3",
         "ts-node": "^10.9.2",
-        "typescript": "^5.3.3"
+        "typescript": "^5.3.3",
+        "vitest": "^1.1.3"
     },
     "husky": {
         "hooks": {
@@ -45,7 +49,9 @@
         }
     },
     "dependencies": {
+        "chalk": "^5.3.0",
         "cli-loading-animation": "^1.0.6",
-        "cli-spinners": "^2.9.2"
+        "cli-spinners": "^2.9.2",
+        "inquirer": "^9.2.12"
     }
 }
