--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "csv-to-sql-insert",
   "version": "0.1.0",
   "type": "module",
+  "module": "commonjs",
   "repository": "https://github.com/gitdagray/csv-to-sql",
   "description": "input a csv file, output a sql insert statement",
   "main": "index.js",
   "scripts": {
     "start": "npm run build && node dist/index.js",
-    "build": "tsc  --skipLibCheck"
+    "build": "tsc  --skipLibCheck",
+    "test": "jest"
   },
   "author": {
     "name": "Dave Gray",
@@ -16,8 +18,11 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@babel/preset-env": "^7.23.8",
+    "@types/jest": "^29.5.11",
     "@types/node": "^20.10.5",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-node": "^4.1.0",
@@ -29,8 +34,11 @@
     "eslint-plugin-prettier": "^5.1.1",
     "eslint-plugin-promise": "^6.1.1",
     "husky": "^8.0.3",
+    "jest": "^29.7.0",
     "prettier": "^3.1.1",
     "pretty-quick": "^3.1.3",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "husky": {
